css/main.css
.site {
  font-size: 115%;
  text-align: justify;
  overflow: scroll;
}

.content {
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  min-height: 50vh;
  max-width: 700px;
}

h1 {
  color: #e56238;
  margin-bottom: 15px;
  text-align: left;
}

h2, h3, h4, h5 {
  color: #005d8b;
  text-align: left;
}

.alert-info {
  background-color: #7cd1ef;
  border: #4fc1e9;
}

.tiki-header {
  text-align: center;
  margin-bottom: 8px;
}

.tiki-header .logo {
  width: 60%;
}

.tiki-header .sweet-logo {
  width: 15%;
}

.twitter-timeline {
  display: none; 
}

@media only screen and (min-width: 770px) {
  .navbar .nav{
      float: none;
      text-align: center;
  }
  .navbar .nav > li{
      float: none;
      display: inline-block;
  }
}

@media only screen and (min-width: 768px) and (max-width: 770px) {
  .navbar .container-fluid {
    padding-right: 0px;
    padding-left: 0px;
  }
}

@media only screen and (max-width: 900px) {
  .tiki-header .logo {
    width: 80%;
  }
}

@media only screen and (min-width: 1200px) {
  .twitter-timeline {
    display: block;
    width: 25%;
    height: 100vh;
    position: fixed;
    top: 0;
    right: 0;
  }
  .site {
    width: 75%;
    height: 100vh;
  }
}

.tiki-footer {
  text-align: center;
}

.tiki-footer .disclaimer {
  font-size: 12px;
  font-style: italic;
  color: #555;
  width: 80%;
  max-width: 650px;
  margin: 15px auto;
}

.tiki-footer hr {
  width: 80%;
  border-top: 1px solid #ddd;
}

.tiki-footer .sponsors {
  margin-top: 30px;
  margin-bottom: 5px;
}

.tiki-footer .sponsor img {
  width: 8%;
  margin: 5px;
}

.tiki-footer .sponsor a {
  opacity: 0.6;
}

.tiki-footer .sponsor a:hover {
  opacity: 1;
}

.tooltip-inner {
  width: 350px;
}

.important-message {
  font-size: 20px;
  margin: 10px 0px;
}

/* Home */

#home h1 {
  max-width : 500px;
}

#home .tiki-history {
  margin-top: 30px;
}

#home .announcements .alert {
  margin: 10px auto;
  padding: 25px 15px;
  width: 95%;
  text-align: center;
  font-weight: bold;
  font-size: 17px;
}

#home .tiki-history .video-container {
  text-align: center;
}

/* About */
#about .fun-stuff * {
  text-align: center;
}

#about .call-for-prizes {
  margin-top: 25px;
}

#about ul {
  list-style-type: none;
  padding: 0px;
  margin: 25px 0px;
}

#about ul li {
  font-size: 20px;
  padding: 10px;
  margin: 6px auto;
}

#about ul li:before, #about ul li:after {
  margin: 10px 5px;
  vertical-align: top;
  display: inline-block;
  content: "";
  background-color: #e56238;
  height: 6px;
  width: 6px;
  border-radius: 50px;
}

#about .act-container {
  display: inline-block;
}

#about .act .time {
  font-style: italic;
  font-size: 12px;
  color: #e56238;
}

/* Tickets + Info */

#tickets h1 {
  max-width: 550px
}

#tickets .center-text {
  text-align: center;
}

#tickets .center-text * {
  text-align: center;
}

#tickets .glyphicon-info-sign {
  margin-left: 5px;
}

#tickets .kahuna-extra-info {
  display: none;
  padding-top: 5px;
}

#tickets a.toggle-kahuna-info {
  font-size: 13px;
  cursor: pointer;
}

#tickets a.toggle-kahuna-info .glyphicon {
  margin-top: 15px;
  font-size: 10px;
}

#tickets .jq-dep-sub {
  display: none;
}

/* Directions */

#directions .map-and-address {
  text-align: center;
}

#directions .map {
  margin: 10px;
}

#directions .location-description {
  margin: 5px 0px;
}

#directions .transportation-method {
  margin: 15px;
}

/* About MS */

#about-ms h3 {
  margin-top: 25px;
}

#about-ms .videos * {
  text-align: center;
}

#about-ms .videos iframe {
  margin: 25px;
}

/* Ohana */

#ohana .team-header {
  margin-top: 25px;
}

#ohana .person {
  text-align: center;
  margin: 25px 0px;
}

#ohana .person * {
  text-align: center;
}

#ohana .person img {
  width: 200px;
  border-radius: 30%;
}

/* Contact */

#contact .contact-description {
  margin : 25px 15px;
}

#contact input[type="tel"] {
  display: inline-block;
}

#contact .form-control.three-digits {
  width: 50px;
}

#contact .form-control.four-digits {
  width: 60px;
}

#contact input[name="saveForm"] {
  color: #fff;
  background-color: #428bca;
  border-color: #357ebd;
  display: inline-block;
  margin-bottom: 0;
  font-weight: 400;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  background-image: none;
  border: 1px solid transparent;
  white-space: nowrap;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857143;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

#contact .hidden-wufoo-components {
  display: none;
}

